{
    "name": "PointerControls",
    "maps": [
        {
            "name": "Pointer",
            "id": "557b26b3-3073-46bb-8160-0b1cf131d4c5",
            "actions": [
                {
                    "name": "PointerDown",
                    "type": "Button",
                    "id": "0e120146-1e4d-40db-b150-325c6e18fad1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "a2ef3c90-f5d8-477f-98d0-97ff3098d9e0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8e21818-5e7d-4d9f-9102-324bab8c68a7",
                    "path": "<Pointer>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa5bda84-c68f-4080-9891-041a62f94008",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}